--- a/src/view/index.html
+++ b/src/view/index.html
@@ -76,12 +76,26 @@
         height: 90vh;
       }
     </style>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+      crossorigin="anonymous"
+    />
   </head>
   <body>
-    <ul id="messages"></ul>
-    <form id="form" action="">
-      <input id="input" autocomplete="off" /><button>Send</button>
-    </form>
+    <div class="container shadow main-table">
+      <div class="w-100 bg-dark p-3 d-flex flex-wrap rounded">
+        <p id="user" class="text-white px-5 fw-bold"></p>
+        <span id="username-display" class="text-white"></span>
+      </div>
+      <ul id="messages"></ul>
+
+      <form id="form" action="">
+        <input id="input" autocomplete="off" />
+        <button>Enviar</button>
+      </form>
+    </div>
 
     <script src="/socket.io/socket.io.js"></script>
     <script>
