--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -2,80 +2,7 @@
 <html>
   <head>
     <title>Socket.IO chat</title>
-    <style>
-      body {
-        margin: 0;
-        padding-bottom: 3rem;
-        font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-          Helvetica, Arial, sans-serif;
-      }
-
-      #form {
-        background: rgb(0, 5, 32);
-        padding: 0.25rem;
-        position: fixed;
-        bottom: 0;
-        left: 8%;
-        right: 0;
-        display: flex;
-        height: 3rem;
-        box-sizing: border-box;
-        backdrop-filter: blur(10px);
-        width: 85%;
-        border-radius: 10px;
-      }
-      #input {
-        border: none;
-        padding: 0 1rem;
-        flex-grow: 1;
-        border-radius: 2rem;
-        margin: 0.25rem;
-      }
-      #input:focus {
-        outline: none;
-      }
-      #form > button {
-        background: #333;
-        border: none;
-        padding: 0 1rem;
-        margin: 0.25rem;
-        border-radius: 3px;
-        outline: none;
-        color: #fff;
-      }
-
-      #messages {
-        list-style-type: none;
-        margin: 0;
-        padding: 0;
-      }
-
-      .own-message {
-        text-align: right;
-        background-color: #c6e9c6; /* Cambia el fondo a tu preferencia */
-        padding: 15px;
-        margin: 20px;
-        border-radius: 20px;
-      }
-
-      p {
-        color: blue;
-        font-weight: bold;
-      }
-
-      .other-message {
-        text-align: left;
-        background-color: #e3e3e3; /* Cambia el fondo a tu preferencia */
-        padding: 15px;
-        margin: 20px;
-        border-radius: 20px;
-      }
-      .main-table {
-        overflow: auto;
-
-        height: 90vh;
-      }
-    </style>
+    <link rel="stylesheet" href="styles/style.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -97,4 +24,7 @@
       </form>
     </div>
   </body>
+
+  <script src="/socket.io/socket.io.js"></script>
+  <script src="/js/script.js"></script>
 </html>
