feat: se crea las funciones para mostrar los mensajes y usuarios

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -16,7 +16,7 @@
         <p id="user" class="text-white px-5 fw-bold"></p>
         <span id="username-display" class="text-white"></span>
       </div>
-      <ul id="messages"></ul>
+      <div id="messages"></div>
 
       <form id="form" action="">
         <input id="input" autocomplete="off" />
