feat: Se agrega el script para mostrar los mensajes

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -27,4 +27,5 @@
 
   <script src="/socket.io/socket.io.js"></script>
   <script src="/js/script.js"></script>
+  <script src="/js/showMessages.js"></script>
 </html>
